2008-09-13:
    Made modification so the user can see wheter or not any changes has been
    made since the last saving of the model. This is displayed by a little
    star after teh filename

2008-09-12:
    Fixed a bug reported by Gunnar needed resolution to have footprint
    correction.
    Added background as a paraemter to interdiff and spec_nx
    Fixed a bug found by Gunnar in the reflectivty module: The module did
    not handle layers correctly (order changed in the stacks)
    Fixed a new bug found by me: The new implementation of proxy objects did
    not work with the custom dialog module used in the reflectivity module.

2008-09-09:
    Implemented some more help on the modules with my help scheme, 
    html docstrings. 
    IMplemented the either or algorithm in DiffEv both with random
    base vector as well as the best vector as base. Tested and works
    
2008-09-08:
    Fixed the scattering factor database acess to automagically update
    the values when changing the database references.
    
2008-09-07:
    Added colourized html text to the Refelctvity plugin.
    Added tooltips to reflectivity plugin and data panel.
    Added a frame to display doc strings html formatted from the
    different modules in the models directory.
===============================================================================
2008-09-05: GenX2.0b2 released
2008-09-05:
    Hopefully fixed problem with negative numbers and errorbars in
    the plotpanel module. 
    Made everything that is in the script saved. (before only the simulated
    part was saved)
    
2008-09-04:
    Added bc as a database in models.utils. The coherent neutron scattering 
    lengths as given in Neutron News. 
    Made some small changes to plotpanel to resolves 0 problems when plotting.
    Updated the homepage with the first tutorial.

2008-09-03:
    Implemented Quit callback.
    Fixed link for the homepage in the About box. One slash was missing